<resources>
    <string name="app_name">fastTransfer</string>

    <!-- Splash Screen -->
    <string name="splash_logo_description">fastTransfer Logo</string>

    <string name="hint_full_name">Full Name</string>
    <string name="btn_next">Next</string>

    <string name="label_name">Name:</string>
    <string name="label_email">Email:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_country">Country:</string>
    <string name="label_address">Address:</string>
    <string name="header_sender_details">Sender Details</string>



    <!-- Sender Information Form -->
    <string name="sender_info_title">Sender Information</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_phone">Enter Phone Number</string>
    <string name="hint_country">Enter Country</string>
    <string name="hint_address">Enter Address</string>
    <string name="next">Next</string>

    <!-- Receiver Information Form -->
    <string name="receiver_details">Receiver Information</string>
    <string name="hint_receiver_name">Enter Receiver Name</string>
    <string name="hint_receiver_address">Enter Address</string>
    <string name="hint_receiver_email">Enter Receiver Email</string>
    <string name="hint_receiver_phone">Enter Receiver Phone Number</string>

    <!-- Review Information Screen -->
    <string name="review_info_title">Review Information</string>
    <string name="sender_name">Sender Name</string>
    <string name="sender_email">Sender Email</string>
    <string name="sender_phone">Sender Phone</string>
    <string name="sender_country">Sender Country</string>
    <string name="sender_address">Sender Address</string>
    <string name="receiver_name">Receiver Name</string>
    <string name="receiver_email">Receiver Email</string>
    <string name="receiver_phone">Receiver Phone</string>
    <string name="receiver_country">Receiver Country</string>
    <string name="receiver_address">Receiver Address</string>
    <string name="edit">Edit</string>




    <!-- Common -->
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sender_details">SENDER DETAILS</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="contact_information">Contact Information</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="review_information">Review Information</string>
    <string name="contact_info">Contact Info</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>

</resources>
