<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <!-- Header -->
    <TextView
        android:id="@+id/tvReceiverHeader"
        style="@style/HeaderStyle"
        android:text="@string/receiver_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <!-- Receiver Details -->
    <EditText
        android:id="@+id/etReceiverEmail"
        style="@style/InputFieldStyle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvReceiverHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/grid_gap" />

    <EditText
        android:id="@+id/etReceiverName"
        style="@style/InputFieldStyle"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/etReceiverEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etReceiverContact"
        style="@style/InputFieldStyle"
        android:hint="@string/contact_information"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/etReceiverName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etReceiverCountry"
        style="@style/InputFieldStyle"
        android:hint="@string/country"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etReceiverContact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etReceiverAddress"
        style="@style/InputFieldStyle"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etReceiverCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Next Button -->
    <Button
        android:id="@+id/btnNext"
        style="@style/ButtonStyle"
        android:text="@string/next"
        android:layout_width="299dp"
        android:layout_height="51dp"
        app:layout_constraintTop_toBottomOf="@id/etReceiverAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
