<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <!-- Header -->

    <TextView
        android:id="@+id/tv_receiver_details_header"
        style="@style/HeaderTextStyle"
        android:text="@string/receiver_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Receiver Email -->

    <EditText
        android:id="@+id/et_receiver_email"
        style="@style/InputFieldStyle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tv_receiver_details_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/grid_gap" />

    <!-- Receiver Full Name -->
    <EditText
        android:id="@+id/et_receiver_full_name"
        style="@style/InputFieldStyle"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/et_receiver_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/grid_gap" />

    <!-- Receiver Contact -->
    <EditText
        android:id="@+id/et_receiver_contact"
        style="@style/InputFieldStyle"
        android:hint="@string/contact_information"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/et_receiver_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/grid_gap" />

    <!-- Receiver Country -->
    <EditText
        android:id="@+id/et_receiver_country"
        style="@style/InputFieldStyle"
        android:hint="@string/country"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_receiver_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/grid_gap" />

    <!-- Receiver Address -->
    <EditText
        android:id="@+id/et_receiver_address"
        style="@style/InputFieldStyle"
        android:hint="@string/address"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_receiver_country"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/grid_gap" />

    <!-- Next Button -->
    <Button
        android:id="@+id/btn_next_receiver"
        style="@style/ButtonStyle"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_receiver_address" />

</androidx.constraintlayout.widget.ConstraintLayout>
