<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Activity.ReviewDetailsActivity">

    <TextView
        android:id="@+id/tvReviewInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_header"
        android:padding="12dp"
        android:text="@string/review_info_title"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_marginTop="-8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="4"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvReviewInformation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvNameHeader"
            style="@style/revHeaderTextStyle"
            android:text="@string/name" />

        <TextView
            android:id="@+id/tvCountryHeader"
            style="@style/revHeaderTextStyle"
            android:text="@string/country" />

        <TextView
            android:id="@+id/tvAddressHeader"
            style="@style/revHeaderTextStyle"
            android:text="@string/address" />

        <TextView
            android:id="@+id/tvContactHeader"
            style="@style/revHeaderTextStyle"
            android:text="@string/contact_info" />

        <TextView
            android:id="@+id/tvSenderName"
            style="@style/revDataTextStyle" />

        <TextView
            android:id="@+id/tvSenderCountry"
            style="@style/revDataTextStyle" />

        <TextView
            android:id="@+id/tvSenderAddress"
            style="@style/revDataTextStyle" />

        <TextView
            android:id="@+id/tvSenderContact"
            style="@style/revDataTextStyle" />

        <ImageView
            android:id="@+id/ivArrow"
            style="@style/revArrowStyle"
            android:layout_columnSpan="4" />

        <TextView
            android:id="@+id/tvReceiverName"
            style="@style/revDataTextStyle" />

        <TextView
            android:id="@+id/tvReceiverCountry"
            style="@style/revDataTextStyle" />

        <TextView
            android:id="@+id/tvReceiverAddress"
            style="@style/revDataTextStyle" />

        <TextView
            android:id="@+id/tvReceiverContact"
            style="@style/revDataTextStyle" />

    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBackToSender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/todo"
        android:src="@drawable/add"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
